fix: spacing under img

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15,5 +15,6 @@ body {
 .article-content {
   img {
     border-radius: .8em;
+    margin: 0;
   }
 }
